# temms

./: .gitignore  Dockerfile  LICENSE  Makefile  README.md  docker-bake.hcl  docker-compose.yml  package.json  prometheus.yml  pyproject.toml
.github/workflows/: ci.yml  docs.yml
agent/: README.md
control/: README.md
deploy/: docker-acceptance-run.sh  docker-compose.acceptance.arm64.yml  docker-compose.acceptance.yml  install.sh  multi-vm-acceptance.sh  temms.conf  temms.env  temms.service
docs/: QUICKSTART.md  README.md  architecture-overview.md  architecture.md  conf.py  crash-atomicity-report.json  demo-runbook.md  deployment-lifecycle.md  direction.md  edge-operations.md  evidence-chain.md  functional-testing.md  hub-lite.md  index.md  mlflow-packaging.md  model-control.md  offline-ddil-mode.md  operational-notes.md  package-signing.md  policy-reference.md  product-summary.md  proof-canonicalization.md  reliability-report.json  reliability-report.md  reliability.md  run-on-linux-vm.md  swap-contract.md  trust-store.md
examples/package-example/: README.md  manifest.json
examples/package-example/models/: mobilenet-v2-tiny.onnx  yolov8n-daylight.onnx  yolov8n-lowlight.onnx
examples/policies/: battery-adaptive.yaml  thermal-adaptive.yaml  weather-adaptive.yaml
grafana/dashboards/: temms-ddil.json
grafana/provisioning/dashboards/: temms.yml
grafana/provisioning/datasources/: prometheus.yml
schemas/: README.md
scripts/: arm64_acceptance.py  canonical_product_demo.py  compose_smoke_report.py  crash_soak.py  docker-entrypoint.sh  gen_canonical_vectors.py  generate_real_models.py  mission_package_smoke.py  mlflow-entrypoint.sh  seed_docker_hub_demo.py  setup-local-mlflow.sh  sim_operator_override.py  sim_weather_scenario.py  soak.py  test_phase1.sh  verify-provenance-demo.sh
src/temms/: __init__.py  __main__.py  benchmark.py  controller.py  evidence.py  hub_lite.py  mlflow_bridge.py  observability.py  telemetry.py
src/temms/cli/: __init__.py  condition.py  main.py  package.py  slot.py
src/temms/conditions/: __init__.py  collectors.py  store.py
src/temms/core/: __init__.py  atomic.py  cache.py  cache_health.py  config.py  database.py  loader.py  mission_package.py  package.py  package_archive.py  package_builder.py  package_catalog.py  runtime_profiles.py  runtime_target_runner.py  signing.py  storage.py  trust_store.py
src/temms/daemon/: __init__.py  deployment_state.py  pending_ops.py  pending_preflight.py  service.py
src/temms/inference/: __init__.py  runtime.py  server.py
src/temms/policy/: __init__.py  engine.py  schema.py
src/temms/sim/: __init__.py  __main__.py  runner.py  scenarios.py  weather.py
src/temms/slots/: __init__.py  manager.py
src/temms/ui/: __init__.py  routes.py
src/temms/ui/static/hub/: index.html
src/temms/ui/static/hub/.vite/: manifest.json
src/temms/ui/static/hub/assets/: index-20d0YRpl.js  index-2T_jUk9z.js  index-3WbA8NpT.js  index-3vihQSIq.js  index-7jqTav1i.js  index-8zLApDaV.js  index-AFGIx0d1.js  index-B49SrSXn.js  index-BGBetYQY.js  index-BLKtrmjh.js  index-BN-JRy1e.js  index-BP_CJgHR.js  index-BRT3tUee.js  index-BSX1pzH9.js  index-BW04TF6t.js  index-BY2Bdbox.js  index-BYraZOH3.js  index-BYymd-8q.js  index-BcVv-_EV.js  index-BeILxj6J.js  index-Blrvspnz.js  index-BqA6bjdJ.js  index-Bu_x6qnZ.js  index-BvyPbClF.js  index-C1bJ5h8H.js  index-C2R2Dv5c.js  index-C2riezbi.js  index-C5e_9w7Z.js  index-C9HOfzJk.js  index-CAGYjEXG.js  index-CB4YYfZx.js  index-CEvpKATS.js  index-CEy48y5_.js  index-CHRpY8YL.js  index-CNXe5R03.js  index-CQ4VhcO5.js  index-CQnyBgfn.js  (+58 more)
src/temms/ui/templates/: base.html  conditions.html  dashboard.html  decisions.html  hub.html  import_page.html  models.html  operate.html  runtime_catalog.html  slot_detail.html  slots.html
tests/: conftest.py  test_sim_scenarios.py  test_sim_weather.py
tests/integration/: __init__.py  test_canonical_product_loop.py  test_compose_stack_smoke.py  test_crash_atomicity.py  test_e2e_docker.py  test_hub_lite_mvp_flow.py  test_hub_lite_online_sync.py  test_inference_flow.py  test_mlflow_package_import.py  test_mvp_multi_vm_acceptance.py  test_real_inference.py  test_soak_smoke.py
tests/unit/: __init__.py  test_benchmark.py  test_canonical_hash_stability.py  test_canonical_product_demo.py  test_canonical_vectors.py  test_cli.py  test_collectors.py  test_condition_store.py  test_controller.py  test_daemon.py  test_ddil_metrics.py  test_decision_chain.py  test_deploy_artifacts.py  test_deployment_state.py  test_evidence.py  test_hub_lite.py  test_mission_package_smoke.py  test_mlflow_bridge.py  test_package.py  test_package_archive.py  test_package_builder.py  test_package_importer.py  test_policy_engine.py  test_runtime.py  test_runtime_target_runner.py  test_seed_docker_hub_demo.py  test_server.py  test_signing_ed25519.py  test_slot_manager.py  test_storage.py  test_swap_contract.py  test_trust_store.py
tests/vectors/: canonical_json_vectors.json
tools/: README.md
ui/: index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.node.json  vite.config.ts
ui/scripts/: assert-runtime-workbench.mjs
ui/src/: App.tsx  api.ts  styles.css  types.ts
ui/src/components/: capability-dossier.tsx  deploy-lists.tsx  edge-deploy-stage.tsx  edge-proof.tsx  field-ops-stage.tsx  field-ops.tsx  mission-stages.tsx  model-plan.tsx  package-handoff.tsx  package-stage.tsx  readiness-panels.tsx  runtime-contract-rows.tsx  runtime-decision-trace.tsx  runtime-execution-contract.tsx  runtime-mission.tsx  runtime-operator-proof.tsx  runtime-optimizer.tsx  runtime-workbench.tsx  ui.tsx  workbench-flow.tsx
ui/src/lib/: deployment-intent.ts  edge-proof-workflow.ts  edge-runtime-mission.ts  field-ops-proof.ts  hub-actions.ts  hub-flow-state.ts  hub-form-actions.ts  hub-format.ts  hub-mission-context.ts  hub-stage-navigation.ts  json.ts  mission-package.ts  mission-spec.ts  mission-workflow.ts  mission-yaml-import.ts  proof-command.ts  proof-hash.ts  readiness.ts  runtime-decision.ts  runtime-fit.ts  runtime-remediation.ts  runtime-stage-view.ts  workbench-types.ts
