[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "temms"
version = "0.1.0"
description = "Mission-first edge MLOps, DDIL operations, and on-device runtime deployment control"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "Apache-2.0"}
authors = [
    {name = "TEMMS Team"}
]
keywords = [
    "ml",
    "mlops",
    "edge",
    "autonomous",
    "offline",
    "ddil",
    "runtime-deployment",
    "mission-packages",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "typer[all]>=0.9.0",
    "rich>=13.0.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0",
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.24.0",
    "python-multipart>=0.0.6",
    "httpx>=0.25.0",
    "numpy>=1.24.0",
    "jinja2>=3.1.0",
    "prometheus-client>=0.20.0",
    "cryptography>=42.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

docs = [
    "sphinx>=8.0.0",
    "furo>=2024.8.6",
    "myst-parser>=4.0.0",
]

# MLflow for local model registry
mlflow = [
    "mlflow>=2.8.0",
    "psycopg2-binary>=2.9.0",  # For PostgreSQL backend
]

# ML runtime dependencies (optional, install what you need)
onnx = ["onnxruntime>=1.16.0"]
tflite = ["tensorflow>=2.14.0"]
torch = ["torch>=2.1.0"]
all-runtimes = [
    "onnxruntime>=1.16.0",
    "tensorflow>=2.14.0",
    "torch>=2.1.0",
]

# Image processing for inference preprocessing
image = ["pillow>=10.0.0"]

# Full inference stack
inference = [
    "onnxruntime>=1.16.0",
    "pillow>=10.0.0",
]

# Simulation environment (Docker / headless)
sim = [
    "onnx>=1.15.0",
    "onnxruntime>=1.16.0",
    "pillow>=10.0.0",
    "opencv-python-headless>=4.8.0",
    "mlflow>=2.8.0",
    "psycopg2-binary>=2.9.0",
]

# Visual simulation (local dev with GUI window)
sim-visual = [
    "onnx>=1.15.0",
    "onnxruntime>=1.16.0",
    "pillow>=10.0.0",
    "opencv-python>=4.8.0",
    "mlflow>=2.8.0",
    "psycopg2-binary>=2.9.0",
]

[project.scripts]
temms = "temms.__main__:app"

[project.urls]
Homepage = "https://github.com/LewisJor/temms"
Documentation = "https://lewisjor.github.io/temms/"
Repository = "https://github.com/LewisJor/temms"
Issues = "https://github.com/LewisJor/temms/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"temms.ui" = [
    "templates/*.html",
    "static/hub/index.html",
    "static/hub/.vite/*.json",
    "static/hub/assets/*",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --cov=temms --cov-report=term-missing"
markers = [
    "slow: spawns subprocesses or sleeps; deselect with -m 'not slow'",
]

[tool.black]
line-length = 100
target-version = ["py311", "py312"]

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "I", "N", "W", "UP"]
ignore = []

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
